<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_baseline_local_police_24"

            android:title="@string/menu_policy" />
        <item
            android:id="@+id/nav_safety"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_slideshow" />
        <item

            android:title="Communications" >

            <menu>

                <item
                    android:id="@+id/nav_emergency"
                    android:icon="@drawable/ic_baseline_battery_charging_full_24"
                    android:title="@string/menu_emergency" />

            </menu>

        </item>

        <item

            android:title="Actions" >
            <menu>

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/menu_sign_out" />
            </menu>
        </item>

    </group>
</menu>